--- a/index.html
+++ b/index.html
@@ -6,20 +6,32 @@
     <title>TODOLIST</title>
     <link rel="stylesheet" href="assets/styles/index.css">
 </head>
-<body class=""  >
-<main class="w-3/4 flex flex-col items-center py-20" >
-      <section class="head flex flex-col gap-4" >
-        <p class="font-medium text-4xl text-gray-900 ">What needs to be done</p>
-        <input type="text" class=" p-4 border-4" >
-        <button>ADD</button>
+<body  class="w-full  lg:max-w-5xl flex items-center justify-center pt-10 "  >
+<main class="w-full lg:w-3/4 flex flex-col gap-3 px-8 lg:px-20 py-8 items-center justify-center shadow-md " >
+      <section class="head flex flex-col gap-4 w-full" >
+        <p class="font-medium text-4xl text-gray-900 text-center">What needs to be done</p>
+        <input type="text" id="myInput" class=" p-4 border-4 w-full " >
+        <button onclick="newTodo()" class="w-full bg-gray-600 text-gray-100 p-3">ADD</button>
       </section>
-        <section class="todo-list">
-            <div class="filters">
-                <button class="all">All</button>
-                <button class="active">Active</button>
-                <button class="completed">Completed</button>
+        <section class="todo-list flex flex-col gap-8 w-11/12  " id="todoList">
+            <div class="filters flex gap-2 w-full" id="filters">
+                <button class="filter w-full border border-gray-500 py-1 hover:bg-slate-400 " id="filterAll" onclick=" filterAll()">All</button>
+                <button class="filter w-full border border-gray-500  py-1  hover:bg-slate-400 " id="filterActive" onclick=" filterByActive()">Active</button>
+                <button class="filter w-full border border-gray-500  py-1  hover:bg-slate-400 " id="filterCompleted" onclick=" filterByCompleted()">Completed</button>
             </div>
-            <h1></h1>
+            <h1 class="text-3xl font-bold text-center"> <span >2</span>  out of <span>3</span> items completed </h1>
+            <div class="todo-items flex flex-col gap-3 pb-6 border-b border-b-gray-400 " id="todoItems">
+               
+                 <div class="todo-item w-full" id="todoItem">
+
+                 </div>
+            </div>
+        </section>
+        <section class="mt-3 w-11/12">
+            <div class="flex flex-row gap-3 items-center">
+                <button class="w-full bg-gray-950 text-white py-4 hover:bg-slate-400" onclick="checkAll()" id="checkAll">Check All</button>
+                <button class="w-full  bg-gray-950 text-white py-4  hover:bg-slate-400 " id="removeCompleted" onclick="removeCompleted()">Remove  Completed</button>
+            </div>
         </section>
     </main>
     <script src="assets/scripts/index.js"></script>
